--- a/TapTracker/index.html
+++ b/TapTracker/index.html
@@ -8,19 +8,24 @@
 </head>
 <body>
 <div id="app">
-<h1 id="counter">0</h1>
+    <h1 id="counter">0</h1>
 
 
-<div class="btn-row">
-<button class="btn green" id="plus3">+3</button>
-<button class="btn green" id="plus5">+5</button>
-</div>
+    <div class="btn-row">
+        <button class="btn green" id="plus3">+3</button>
+        <button class="btn green" id="plus5">+5</button>
+    </div>
 
 
-<div class="btn-row">
-<button class="btn red" id="minus3">-3</button>
-<button class="btn red" id="minus5">-5</button>
-</div>
+    <div class="btn-row">
+        <button class="btn red" id="minus3">-3</button>
+        <button class="btn red" id="minus5">-5</button>
+    </div>
+
+    <div class="btn-row">
+        <button class="btn red" id="reset">Reset</button>
+    </div>
+
 </div>
 
 
